--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,9 +1,5 @@
-[all:vars]
-ansible_user = root
-ansible_port = 22
-
 [defaults]
 inventory  = .inventory/defaults.ini
 interpreter_python = auto
 remote_user = dmitriipolushin
-private_key_file =  /Users/dmitriipolushin/.ssh/id_rsa
+private_key_file =  /Users/dmitriipolushin/.ssh/id_ed25519
