--- a/ansible/playbooks/dev/main.yml
+++ b/ansible/playbooks/dev/main.yml
@@ -1,8 +1,4 @@
 - hosts: all
-
-  vars:
-    pip_install_packages:
-      - name: docker
-
   roles:
-    - geerlingguy.pip
+    - geerlingguy.docker
+  become: yes
