--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -19,3 +19,11 @@ spec:
         image: dmitriipolushin/lab2_python_app:latest
         ports:
         - containerPort: 8000
+
+        resources: 
+          limits:
+            cpu: 100m
+            memory: 100Mi
+          requests:
+            cpu: 50m
+            memory: 80Mi
